--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         Challenge 1:
         Write the HTML for your personal website.
         -->
-        <img src="per.jpg">
-        <h1>Hi, my name is Per</h1>
+        <img src="lekshmi1.jpg">
+        <h1>Hi, my name is Lekshmi</h1>
         <h2>Fun facts about me:</h2>
         <ul>
-            <li>36 years old</li>
-            <li>Live in Norway</li>
-            <li>Sing in a choir</li>
+            <li>19 years old</li>
+            <li>Live in Trivandrum</li>
+            <li>coding my passion!</li>
         </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/per-harald-borgen/" taget="_blank">LinkedIn here.</a></p>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/bk-lekshmi-719375259" taget="_blank">LinkedIn here.</a></p>
         <input type="text" placeholder="Enter email...">
         <button>Join newsletter</button>
     </body>
