--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- 
         Challenge 1:
-        Write the HTML for your personal website.
+        Write the HTML for your personal website. ok 
         -->
         <img src="lekshmi1.jpg">
         <h1>Hi, my name is Lekshmi</h1>
